syntax = "proto3";
package EfMapperDemo;
option csharp_namespace = "EfMapperDemo";

import "google/protobuf/wrappers.proto";

message EmployeeDTO {
	string name = 1;
	string description = 2;
	google.protobuf.StringValue projectName = 3;
}

message ProjectDTO {
	string name = 1;
	string description = 2;
	repeated EmployeeDTO Employees = 3;
}

message AllDataDTO {
	repeated EmployeeDTO Employees = 1;
	repeated ProjectDTO Projects = 2;
}